--- a/index.css
+++ b/index.css
@@ -8,7 +8,7 @@ html, body {
   width: 100%;
   height: 100%;
   background: url("/assets/mars2.jpg");
-  background-repeat: no-repeat;
+  overflow: hidden;
 }
 
 .icon {
@@ -155,6 +155,17 @@ html, body {
   height: 100vh;
   max-width: 100%;
   overflow: hidden;
+}
+
+div#page-0 {
+  margin-top: 20%;
+  margin-left: 24% ;
+  padding-top: 8%;
+  width: 50%;
+  height: 300px;
+  border: 1px solid gray;
+  background-color: #ffffff;
+  border-radius: 1.5%;
 }
 
 div#page-1 {
