--- a/index.css
+++ b/index.css
@@ -54,7 +54,7 @@ html, body {
   opacity: 1;
   overflow: hidden;
   position: absolute;
-  top: 0;
+  top: 150;
   z-index: 2;
 }
 
@@ -248,4 +248,37 @@ margin: 8px 0;
 border: none;
 border-radius: 4px;
 cursor: pointer;
+}
+
+#surrender {
+  display: fixed;
+  left: 20;
+  top: 20;
+  margin-bottom: 50;
+}
+
+#scoreboard {
+  position: fixed;
+  right: 0;
+  top: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.big-div {
+  display: flex;
+  
+}
+
+.big-div > div {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 4px;
+}
+
+.score-num {
+  font-size: 18;
 }
