--- a/index.css
+++ b/index.css
@@ -7,7 +7,7 @@ html, body {
   margin: 0;
   width: 100%;
   height: 100%;
-  background: url("/assets/mars2.jpg");
+  background: #ffffff;
   overflow: hidden;
 }
 
